--- a/modal/package.json
+++ b/modal/package.json
@@ -12,6 +12,7 @@
     "@types/react-dom": "^17.0.0",
     "bootstrap": "^5.1.3",
     "react": "^17.0.2",
+    "react-beautiful-dnd": "^13.1.0",
     "react-bootstrap": "^1.6.4",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
