--- a/modal/package.json
+++ b/modal/package.json
@@ -15,6 +15,7 @@
     "react-beautiful-dnd": "^13.1.0",
     "react-bootstrap": "^1.6.4",
     "react-dom": "^17.0.2",
+    "react-draggable": "^4.4.4",
     "react-scripts": "4.0.3",
     "typescript": "^4.1.2",
     "web-vitals": "^1.0.1"
